fix: Show icon for custom controls on mobile phone screen sizes

--- a/src/sass/_controls.scss
+++ b/src/sass/_controls.scss
@@ -107,8 +107,17 @@
         font-size: 30px;
       }
 
+      & {
+        text-overflow: clip;
+      }
+
       span {
-        display: none;
+        visibility: hidden;
+        span {
+          visibility: visible;
+          font-size: 30px;
+          width: auto !important;
+        }
       }
     }
   }
